k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitalsync-backend-svc
  namespace: default
spec:
  # ClusterIP : expose le backend uniquement à l'intérieur du cluster Kubernetes
  # Il n'est PAS accessible depuis l'extérieur, uniquement par le frontend et autres pods internes
  type: ClusterIP
  selector:
    app: vitalsync-backend
  ports:
    - protocol: TCP
      port: 3000        # Port exposé à l'intérieur du cluster
      targetPort: 3000  # Port sur lequel écoute le conteneur backend
